@@ -151,13 +151,13 @@ class AdaptiveTask(binding.Component):
         return cmp(self.priority, other.priority)
 
 
-    __addToQueue = binding.Once(
-
+    __addToQueue = binding.whenAssembled(
         lambda self,d,a:
             self.lookupComponent(ITaskQueue).addTask(self),
-
-        activateUponAssembly=True
     )
+
+
+
 
 
 
